lang/macro/tests/ui/fail/20-invalid-constructor-parameter.rs
use liquid_lang as liquid;

#[liquid::contract(version = "0.1.0")]
mod noop {
    #[liquid(storage)]
    struct Noop {}

    #[liquid(methods)]
    impl Noop {
        pub fn new(&mut self, value: f32) {}

        pub fn noop(&self) {}
    }
}

fn main() {}
